# ImageProcessing

./: .clang-tidy  CMakeLists.txt  ImageProcessingConfig.h.in  ImageProcessingConstants.h  ImageProcessingHelpers.hpp  ImageProcessingPlugin.cpp  ImageProcessingPlugin.h  LICENSE  README.md
Documentation/ImageProcessingFilters/: AlignSectionsPhaseCorrelation.md  AutoThreshold.md  BinaryWatershedLabeled.md  ConvertArrayTo8BitImage.md  ConvertArrayTo8BitImageAttributeMatrix.md  DetermineStitching.md  DetermineStitchingCoordinatesGeneric.md  DiscreteGaussianBlur.md  FindMaxima.md  GaussianBlur.md  GrayToRGB.md  HoughCircles.md  IPItkImportImageStack.md  ImageCalculator.md  ImageMath.md  ImageProcessingFilter.md  ItkFindMaxima.md  (+47 more)
Gui/: ImageProcessingGuiPlugin.cpp  ImageProcessingGuiPlugin.h
ImageProcessingFilters/: AlignSectionsPhaseCorrelation.cpp  AlignSectionsPhaseCorrelation.h  AutoThreshold.cpp  AutoThreshold.h  BinaryWatershed.h  BinaryWatershedLabeled.cpp  BinaryWatershedLabeled.h  ConvertArrayTo8BitImage.cpp  ConvertArrayTo8BitImage.h  ConvertArrayTo8BitImageAttributeMatrix.cpp  ConvertArrayTo8BitImageAttributeMatrix.h  DetermineStitchingCoordinatesGeneric.cpp  DetermineStitchingCoordinatesGeneric.h  DiscreteGaussianBlur.cpp  DiscreteGaussianBlur.h  DistanceMap.cpp  FindMaxima.cpp  FindMaxima.h  GaussianBlur.cpp  GaussianBlur.h  GrayToRGB.cpp  GrayToRGB.h  HoughCircles.cpp  HoughCircles.h  IPItkImportImageStack.cpp  IPItkImportImageStack.h  ImageCalculator.cpp  ImageCalculator.h  ImageMath.cpp  ImageMath.h  ImageProcessingFilter.cpp  ImageProcessingFilter.h  ImageRegistration.cpp  ImageRegistration.h  ImportRegisteredImageMontage.cpp  ImportRegisteredImageMontage.h  ItkAlignSectionsPhaseCorrelation.cpp  ItkAlignSectionsPhaseCorrelation.h  ItkAutoThreshold.cpp  ItkAutoThreshold.h  (+87 more)
Resources/: ImageProcessing.qrc
Test/: BinaryWatershedTest.cpp  CMakeLists.txt  ITKUtilitiesTest.cpp
(+4 files in other folders)
